--- a/styles/global.css
+++ b/styles/global.css
@@ -34,4 +34,12 @@ img {
   width: 100%;
 }
 
+.h2-sections {
+  font-size: 40px;
+  line-height: 47px;
+  font-family: Raleway;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
 
